--- a/Laba1/salon.html
+++ b/Laba1/salon.html
@@ -2,6 +2,10 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="сторінка для лабораторної 1">
+    <meta name="keywords" content="test, laba, 1">
+    <meta name="author" content="Oleh">
     <title>Салон краси</title>
     <style>
         body {
@@ -62,6 +66,7 @@
 
     <div id="content">
         <h2>Наші послуги</h2>
+        <h3>Майстри салону</h3>
         <p>Опис послуг салону...</p>
 
         <img src="image.png" alt="Салон">
